fix links section content center alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -200,11 +200,12 @@ ul {
 
 .links-inner {
   max-width: 1100px;
-  padding: 0 20px;
+  padding: 0 20px 0 20px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-gap: 5px;
-  align-items: flex-start;
+  grid-gap: 10px;
+  align-items: center;
   justify-content: center;
 }
 
